You can now remove filters

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 	<script src="https://code.highcharts.com/highcharts.src.js"></script>
 	<script type='text/javascript' src='client.js'></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+
+	<!-- Mustache templates -->
+	<script class="mustache-template" id="template-filters" type="x-tmpl-mustache">
+		{{#filters}}
+		<div class="filter">
+				<a href="#" style="color:gray" class="filter-delete" filter-name="{{.}}">X</a>
+				{{.}}
+		</div>
+		{{/filters}}
+	</script>
+
 	<style>
 		html,
 		body,
