Added infinite scroll

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 			margin-right: 5px;
 		}
 
+		/* #recipes {
+			height: 300px;
+  			overflow: auto;
+		} */
+
 		/* Handle stars rating */
 		.ratings {
 			position: relative;
